@@ -2,7 +2,7 @@ SUBDIRS = icons pics
 
 noinst_LTLIBRARIES = libui.la
 
-libui_la_SOURCES = sidebar.cpp mainview.cpp droptarget.cpp tray.cpp splash.cpp
+libui_la_SOURCES = sidebar.cpp viewscontainer.cpp mainview.cpp droptarget.cpp tray.cpp splash.cpp
 
 #droptarget.cpp groupspanel.cpp mainview.cpp panelsmanager.cpp \
 #                splash.cpp testview.cpp tray.cpp traytransfer.cpp sidebar.cpp
